--- a/front/package.json
+++ b/front/package.json
@@ -20,6 +20,8 @@
     "@angular/router": "^17.2.0",
     "bootstrap": "^5.3.3",
     "bootstrap-icons": "^1.11.3",
+    "lottie-web": "^5.12.2",
+    "ngx-lottie": "^11.0.2",
     "primeicons": "^7.0.0",
     "primeng": "^17.15.0",
     "rxjs": "~7.8.0",
