Add generate credit request without data

--- a/front/package.json
+++ b/front/package.json
@@ -22,6 +22,8 @@
     "@auth0/angular-jwt": "^5.2.0",
     "bootstrap": "^5.3.3",
     "bootstrap-icons": "^1.11.3",
+    "exceljs": "^4.4.0",
+    "file-saver": "^2.0.5",
     "lottie-web": "^5.12.2",
     "ngx-cookie-service": "^17.1.0",
     "ngx-lottie": "^11.0.2",
@@ -35,6 +37,7 @@
     "@angular-devkit/build-angular": "^17.2.0",
     "@angular/cli": "^17.2.0",
     "@angular/compiler-cli": "^17.2.0",
+    "@types/file-saver": "^2.0.7",
     "@types/jasmine": "~5.1.0",
     "jasmine-core": "~5.1.0",
     "karma": "~6.4.0",
