--- a/back/.htaccess
+++ b/back/.htaccess
@@ -1,6 +1,6 @@
 <IfModule mod_headers.c>
     Header set Access-Control-Allow-Origin "http://localhost:4200"
-    Header set Access-Control-Allow-Methods "POST, GET, PUT, DELETE, OPTIONS"
+    Header set Access-Control-Allow-Methods "POST, GET, PUT, DELETE, PATCH, OPTIONS"
     Header set Access-Control-Allow-Headers "Content-Type, Authorization"
     Header set Access-Control-Allow-Credentials "true"
 </IfModule>
