--- a/front/package.json
+++ b/front/package.json
@@ -24,6 +24,7 @@
     "bootstrap-icons": "^1.11.3",
     "exceljs": "^4.4.0",
     "file-saver": "^2.0.5",
+    "jszip": "^3.10.1",
     "lottie-web": "^5.12.2",
     "ngx-cookie-service": "^17.1.0",
     "ngx-lottie": "^11.0.2",
