--- a/.cpanel.yml
+++ b/.cpanel.yml
@@ -1,14 +1,7 @@
 ---
 deployment:
   tasks:
-    - echo "Iniciando despliegue automático..."
     - export DEPLOY_PATH=/home/femseapto/public_html/development/
-    - echo "Sincronizando backend PHP al public_html..."
     - rsync -avz --exclude=.git back/ $DEPLOY_PATH/
-    - echo "Backend PHP desplegado en $DEPLOY_PATH."
-    - echo "Instalando dependencias y compilando frontend Angular..."
-    - cd front
-    - npm install
+    - cd front/
     - ng build --configuration production --output-path=$DEPLOY_PATH
-    - echo "Frontend Angular compilado y desplegado en $DEPLOY_PATH."
-    - echo "Despliegue completado correctamente."
